cabal-version:  1.12
name:           truss
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/truss#readme>
homepage:       https://github.com/lancelet/truss.hs#readme
bug-reports:    https://github.com/lancelet/truss.hs/issues
author:         Jonathan Merritt
maintainer:     j.s.merritt@gmail.com
copyright:      2019 Jonathan Merritt
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC ==8.6.5
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/truss

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  build-depends:
      base >=4.7 && <5

executable truss
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , truss

test-suite truss-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , truss
